--- a/webdevelopers/index.html
+++ b/webdevelopers/index.html
@@ -27,11 +27,18 @@
             <li>
                 <a href="danvitoriano.html">Dan Vitoriano</a>
             </li>
+            <li>
+                <a href="diegohs13.html">Diego Henrique</a>
+            </li>
         </ul>
     </section>
     <footer>
         <p>
-            Entre em contato <a href="mailto:contato@danvitoriano.com.br">contato@danvitoriano.com.br</a>
+            Entre em contato: 
+            <br>
+            <a href="mailto:contato@danvitoriano.com.br">contato@danvitoriano.com.br</a>
+            <br>
+            <a href="mailto:diego.hsoliveira13@gmail.com">diego.hsoliveira13@gmail.com</a>
         </p>
     </footer>
 </body>
